<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.juandaqugo.hospitalnearby.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/nombre"
            android:id="@+id/enombre"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/usuario"
            android:id="@+id/enombre_usuario"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/documento"
            android:id="@+id/edocumento"
            android:inputType="numberDecimal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/subaunafoto"
                android:gravity="center"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:text="@string/seleccionar"
                android:layout_margin="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/seleccione_sexo"
                android:textAlignment="center"/>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/masculino"
                    android:id="@+id/rmasculino"
                    android:checked="true"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/femenino"
                    android:id="@+id/rfemenino"
                    android:checked="false"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/n_telefono"
            android:id="@+id/etelefono"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/correo"
            android:id="@+id/ecorreo"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/sangre"/>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/apositivo"
                    android:checked="true"
                    android:id="@+id/r_apos"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/anegativo"
                    android:checked="false"
                    android:id="@+id/r_aneg"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/bpositivo"
                    android:checked="false"
                    android:id="@+id/r_bpos"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/bnegativo"
                    android:checked="false"
                    android:id="@+id/r_bneg"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/opositivo"
                    android:checked="false"
                    android:id="@+id/r_opos"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/onegativo"
                    android:checked="false"
                    android:id="@+id/r_oneg"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/abpositivo"
                    android:checked="false"
                    android:id="@+id/r_abpos"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/abnegativo"
                    android:checked="false"
                    android:id="@+id/r_abneg"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/contrasena"
        android:id="@+id/econtrasenar"
            android:inputType="textPassword"/>
        <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/repetir_contrasena"
        android:id="@+id/econtrasenarep"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/alergias"
            android:id="@+id/ealergias"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enfermedades"
            android:id="@+id/eenfermedades"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/acudiente"
            android:id="@+id/enombre_acudiente"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/t_acudiente"
            android:id="@+id/etelefono_acudiente"
            android:inputType="numberDecimal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/cancelar"
                android:id="@+id/bcancelar"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/enviar"
                android:background="@color/gray"
                android:id="@+id/benviar"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
